# schwab-auto-trader

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
src/: config.rs  lib.rs  main.rs
src/oauth/: mod.rs  token.rs  token_server.rs  token_storage.rs  utils.rs
src/schwab/: account_manager.rs  client.rs  endpoints.rs  math.rs  mod.rs  schemas.rs
src/schwab/schemas/: mod.rs
src/schwab/schemas/accounts_and_trading/: accounts.rs
src/server/: mod.rs  server.rs
src/server/web_resources/: files.rs
src/server/web_resources/files/: index.html
src/server/web_resources/files/css/: main.css  oauth.css  oauth_return.css  root.css
src/server/web_resources/files/html/: footer.html  header.html  index.html  oauth.html  oauth_return.html  root.html
test/cert/: cert.pem  key.pem
ui/: index.html
