[package]
name = "schwab-auto-trader"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
http-body-util = { version = "0.1.3" }
rustls-pki-types = { version = "1.12.0" }
rustls = { version = "0.23.28" }
oauth2 = "5.0.0"
rustls-pemfile = "2.2.0"
url = "2.5.4"
tokio-rustls = { version = "0.26.2" }
tokio = { version = "1.45.1", features = ["full"] }
json = "0.12.4"
serde_json = "1.0.140"
serde = "1.0.219"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
tokio-util = "0.7.16"
tokio-context = "0.1.3"
log = "0.4.28"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["blocking"] }
chrono = "0.4.42"
handlebars = "6.3.2"
